--- a/styles/comandas.css
+++ b/styles/comandas.css
@@ -1,106 +1,226 @@
-.contendor-form {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.sale-form {
-  width: 30rem;
-  height: 40rem;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-}
 
-.div-form-client {
-  width: 80%;
-  margin: 1rem;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 1rem;
+main {
+  width: 70%;
+  margin: auto;
   padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: 90vh;
 }
 
-.div-form-client input, select {
-  margin: .6rem 0;
-  padding: .3rem;
-  border-radius: .5rem;
-}
-
-.div-form-products {
-  width: 80%;
+.section-botones {
   display: flex;
-  flex-flow: column nowrap;
   align-items: center;
-  border: 1px solid black;
-  border-radius: 1rem;
-  padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  justify-content: flex-end;
+  gap: 2rem;
+  list-style: none;
+  padding-right: 2rem;
+  margin: 1rem 0;
 }
 
-.div-form-products input, select {
-  margin: .6rem  0;
-  padding: .3rem;
-  border-radius: .5rem;
-}
-
-.div-buttons {
-  width: 100%;
+/* clases para el buscador */
+.input-group {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1rem;
+  align-items: center;
 }
 
-.div-buttons button {
-  padding: .7rem;
-  background-color: #fac710;
-  border: 1px solid #fac710;
-  border-radius: .5rem;
-  font-weight: bold;
-  transition: all .5s;
-  cursor: pointer;
-}
-
-.div-buttons button:hover { 
+.input {
+  min-height: 2.5rem;
+  max-width: 150px;
+  padding: 0 1rem;
   color: black;
+  font-size: 15px;
+  border: 2px solid #fac710;
+  border-radius: 1rem 0 0 1rem;
+  background-color: transparent;
+}
+
+.button--submit {
+  min-height: 2.75rem;
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 0 1rem 1rem 0;
   background-color: #fac710;
-  box-shadow: #fac710 0 4px 15px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.button--submit:hover {
+  background-color: #f7d457;
+}
+
+.input:focus,
+.input:focus-visible {
+  border-color: #d3a500;
+  outline: none;
+}
+
+.section-sale-list {
+  width: 90%;
+  height: 45.5rem;
+  display: flex;
+  margin: 0 auto;
+  align-items: flex-start;
+  flex-flow: wrap column;
+  justify-content: flex-start;
+  gap: 1.2rem;
+}
+
+/* Boton Agregar Comanda */
+
+.button-add {
+  color: black;
+  display: inline-block;
+  padding: 0.7rem;
+  background-color: white;
+  border: 2px solid #fac710;
+  border-radius: 2rem;
+  transition: 0.3s all;
+}
+
+.button-add:hover {
+  transform: translateY(-5px);
+  cursor: pointer;
+  background-color: #fac710;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+
+.button-add:active {
+  transform: scale(0.99);
+  transform: translateY(-2px);
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+}
+
+
+/* Clases para SaleCard */
+
+.article-sale {
+  width: 35rem;
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem;
+  background-color: white;
+  transition: all 0.3s;
+
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
+.article-sale:hover {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.div-up-info,
+.div-down-info {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.2rem 2rem;
+}
+
+.div-button-card {
+  gap: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.button-card {
+  text-align: center;
+  width: 6.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  padding: 0.3rem 0;
+  border-radius: 1rem;
+  transition: all 0.4s;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.delete {
+  background-color: tomato;
+}
+
+.detail {
+  background-color: #fac710;
+}
+
+.button-card:hover {
+  transform: translateY(-3px);
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.button-card:active {
+  transform: scale(0.9);
+}
+
+.error-message {
+  color: tomato;
+  font-weight: bold;
+  font-size: 1.3rem;
+  width: 100%;
+  text-align: center;
+}
+
+/* Clases para los botones de paginación*/
+
+.number-list {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.button-list {
+  background-color: white;
+  border: solid 2px #fac710;
+  padding: .2rem .5rem;
+  color: black;
+  border-radius: .5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.button-list:hover {
+  background-color: #fac710;
   transform: translateY(-2px);
 }
 
-.div-buttons button:active {
+.button-list:active {
+  background-color: #fac710;
+  transform: translateY(0px);
+  transform: scale(0.98);
   box-shadow: none;
-  transform: scale(.95);
 }
 
-.order-preview {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 20rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  min-height: 25rem;
-  margin: 4rem 2rem; 
+.input-number-list {
+  width: 2rem;
+  text-align: center;
+  padding: .3rem .5rem;
+  font-weight: bold;
+  font-size: 1.3rem;
+  border-radius: .5rem;
+  margin: 0 .5rem;
 }
 
-.order-preview ul {
-  list-style: none;
-  padding: .3rem 1rem;
-}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    }
+input[type=number] { -moz-appearance:textfield; }
 
-.order-preview li {
-  margin: .4rem 0;
+/* Clases interactivas */
+.hidden {
+  display: none;
 }
-
-.valor-total {
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 1rem;
-  right: 2rem;
-}
-
