--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -30,6 +30,7 @@ body {
 }
 .div-links-navBar {
   display: flex;
+  align-items: center;
   gap: 2rem;
 }
 
@@ -49,3 +50,39 @@ a {
 .link:hover {
   text-decoration: underline #fac710 3px;
 }
+
+.logout-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 6rem;
+  height: 2.5rem;
+  margin-left: 2rem;
+  background-color: white;
+  border: 2px solid #fac710;
+  border-radius: .5rem;
+  color: black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: "Roboto Mono", monospace;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  cursor: pointer;
+}
+
+.logout-button:disabled {
+  pointer-events: none;
+}
+
+.logout-button:hover {
+  color: black;
+  background-color: #fac710;
+  box-shadow: gray 0 5px 10px;
+  transform: translateY(-2px);
+}
+
+.logout-button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
