--- a/styles/productosForm.module.css
+++ b/styles/productosForm.module.css
@@ -1,12 +1,11 @@
-
-.div-form {
+.divForm {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.form-añadir-producto {
+.formAñadirProducto {
   width: 25%;
   display: flex;
   flex-flow: column wrap;
@@ -19,7 +18,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.div-input {
+.divInput {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -36,40 +35,42 @@
   padding: .5rem;
 }
 
-.div-select {
+.divSelect {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.div-select select {
+.divSelect select {
   border-radius: .5rem;
   padding: .3rem;
   font-size: 1em;
   margin: .7rem;
 }
 
-.div-file {
+.divFile {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.div-file input {
+.divFile input {
   padding: .5rem;
   margin: .6rem;
 }
 
-form button {
+.button {
   padding: .7rem 1.5rem;
   background-color: #fac710;
   border: 0.125em solid #fac710;
   border-radius: 1rem;
   font-weight: bold;
   transition: all .3s;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  cursor: pointer;
 }
 
-form button:hover {
+.button:hover {
   color: black;
   background-color: #fac710;
   box-shadow: #fac710 0 4px 15px;
@@ -77,7 +78,7 @@ form button:hover {
   
 }
 
-form button:active {
+.button:active {
   box-shadow: none;
   transform: translateY(0);
 }
