--- a/styles/principal.module.css
+++ b/styles/principal.module.css
@@ -350,3 +350,17 @@
   width: 100%;
   padding: 1rem;
 }
+
+@media (max-width: 1424px) {
+  .main{
+    width: 85%;
+  }
+  .divInfoP,
+  .divInfoC,
+  .divInfoS {
+    width: 17rem;
+  }
+  .barChart {
+    height: 20rem;
+  }
+}
