--- a/styles/principal.module.css
+++ b/styles/principal.module.css
@@ -108,6 +108,7 @@
   font-weight: bold;
 }
 
+
 .divSelectDate {
   width: 95%;
   display: flex;
@@ -124,67 +125,65 @@
 
 .divContainerSearchMonth {
   width: 100%;
+  height: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.searchMonthButton {
-  padding: .3rem .5rem;
-  background-color: #69e62f;
-  margin: .5rem;
+.divButtonsDate {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+  rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  border-radius: 0 .5rem .5rem 0;
+}
+
+.dateButton {
+  padding: .5rem;
+  background-color: #fac710;
   color: white;
   border: none;
-  border-radius: 25%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
   transition: all .3s ease;
 }
 
-.deleteMonthButton {
-  padding: .3rem .5rem;
-  background-color: tomato;
-  margin: .5rem;
-  color: white;
-  border: none;
-  border-radius: 25%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  transition: all .3s ease;
+.dateButton:hover {
+  background-color: #f7d457
 }
 
-.searchMonthButton:hover,
-.deleteMonthButton:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.searchMonthButton:active,
-.deleteMonthButton:active {
-  transform: scale(.95);
-  cursor: pointer;
-}
 
 .divSelectMonth {
   display: flex;
   justify-content: center;
   position: relative;
-  min-width: 4rem;
-  height: 2rem;
-  margin: 1.5rem;
+  height: 2.7rem;
   border-radius: .2rem;
 }
 
 .selectMonth {
-  border: none;
+  border: 2.5px solid #fac710;
+  border-radius: .5rem 0 0 .5rem;
   appearance: none;
   padding: 0rem 2rem;
   width: 100%;
-  background-color: #fac710;
-  color: white;
+  background-color: white;
+  color: black;
   font-size: 1em;
   font-weight: bold;
-  border-radius: .5rem;
   cursor: pointer;
   scroll-behavior: smooth;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+  rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.inputDate {
+  min-height: 2.4rem;
+  width: 8rem;
+  padding: 0 1rem;
+  color: black;
+  font-size: 15px;
+  border: 2px solid #fac710;
+  border-radius: .5rem 0 0 .5rem;
+  background-color: transparent;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
   rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
@@ -349,6 +348,26 @@
   justify-content: center;
   width: 100%;
   padding: 1rem;
+}
+
+.buttonDate {
+  font-weight: bold;
+  background-color: white;
+  padding: .2rem .7rem;
+  border: 1px solid #fac710;
+  border-radius: .4rem;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.buttonDate:hover {
+  background-color: #fac710;
+  border-color: #fac710;
+}
+
+.buttonDate:active {
+  background-color: #ddb217;
 }
 
 @media (max-width: 1424px) {
