--- a/styles/comandasCreate.module.css
+++ b/styles/comandasCreate.module.css
@@ -2,10 +2,11 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .saleForm {
   width: 30rem;
-  height: 40rem;
+  min-height: 40rem;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -33,14 +34,32 @@
 .divFormClientInput::-webkit-inner-spin-button,
 .divFormClientInput::-webkit-outer-spin-button,
 .divFormProductsInput::-webkit-inner-spin-button,
-.divFormProductsInput::-webkit-outer-spin-button {
+.divFormProductsInput::-webkit-outer-spin-button,
+.inputEmpanada::-webkit-inner-spin-button,
+.inputEmpanada::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
     }
 .divFormClientInput { -moz-appearance:textfield; }
 .divFormProductsInput { -moz-appearance:textfield; }
+.inputEmpanada { -moz-appearance:textfield; }
 
+.divVariety {
+  width: 100%;
+}
 
+.inputEmpanada {
+  width: 1.25rem;
+  padding: 0.3rem;
+  border-radius: .5rem;
+  margin-right: .3rem;
+  text-align: center;
+}
+
+.liInput {
+  display: flex;
+  align-items: center;
+}
 
 .divFormProducts {
   width: 80%;
@@ -82,11 +101,18 @@
   transform: scale(.95);
 }
 
+.orderPreviewProductList {
+  height: fit-content;
+  margin-bottom: 2.5rem;
+}
+
 .orderPreview {
   display: flex;
   flex-direction: column;
   position: relative;
   width: 21rem;
+  min-height: 30rem;
+  max-height: max-content;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   min-height: 25rem;
   margin: 4rem 2rem; 
@@ -99,6 +125,41 @@
 
 .li {
   margin: .4rem 0;
+}
+
+.ul {
+  list-style: none;
+  padding-left: .625rem;
+}
+
+.buttonRemove {
+  background-color: tomato;
+  opacity: .8;
+  color: white;
+  border: none;
+  padding: .2rem .4rem;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.buttonRemove:hover {
+  transform: scale(1.1);
+  background-color: rgb(252, 55, 20);
+  opacity: 1;
+}
+
+.buttonRemove:active {
+  transform: scale(1);
+}
+
+.pEmpanada {
+  font-size: .85rem;
+  margin: .3rem 0 0 .6rem;
+}
+
+.liProductOrderPreview {
+  margin: .3rem 0;
 }
 
 .valorTotal {
